1 - Criação da Interface
Telas Iniciais do APP. Cores e Imagens ainda desconfiguradas, sistema
realizando apenas funcionalidades referentes à mudança de telas.

--- a/CienciasDown/app/src/main/res/menu/menu_main.xml
+++ b/CienciasDown/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="br.edu.ifspsaocarlos.sdm.cienciasdown.View.MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    tools:context="br.edu.ifspsaocarlos.sdm.cienciasdown.View.*">
+
+    <!--item
+        android:id="@+id/ic_home"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_home"
+        android:title="Home"/-->
+
+    <item android:id="@+id/ic_help"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_help"
+        android:title="HELP"/>
+
 </menu>
