--- a/CienciasDown/app/src/main/res/values/styles.xml
+++ b/CienciasDown/app/src/main/res/values/styles.xml
@@ -1,8 +1,18 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
+        <item name="actionBarStyle">@style/MyActionBar</item>
+    </style>
+
+    <style name="MyActionBar"
+        parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+
+        <item name="background">@android:color/holo_green_light</item>
+        <item name="icon">@drawable/icone_pq</item>
+        <item name="displayOptions">showTitle|showHome</item>
+
     </style>
 
 </resources>
