2 - Criação do banco de dados e funcionalidades básicas

--- a/CienciasDown/app/src/main/res/layout/activity_cadastro.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_cadastro.xml
@@ -63,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/botao"
+            android:visibility="invisible"
             android:text="@string/texto_botao_enviar"
             android:textColor="#FFFFFF"
             android:textSize="25sp"
@@ -74,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:background="@drawable/botao"
+            android:visibility="invisible"
             android:text="@string/texto_botao_ver_alunos"
             android:textColor="#FFFFFF"
             android:textSize="25sp"
