--- a/CienciasDown/app/src/main/res/layout/activity_ciclo_agua.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_ciclo_agua.xml
@@ -4,9 +4,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/ciclo_agua"
     tools:context="br.edu.ifspsaocarlos.sdm.cienciasdown.View.CicloAguaActivity">
 
-    <TextView android:text="Futura Activity sobre Ciclo da Água" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--TextView android:text="Futura Activity sobre Ciclo da Água" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" /-->
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EVAPORAÇÃO"
+        android:id="@+id/btnEvaporacao"
+        android:background="@android:color/transparent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="onClickEvaporacao" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button2"
+        android:background="#66000000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="41dp"
+        android:layout_marginStart="41dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button3"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
