--- a/CienciasDown/app/src/main/res/layout/activity_main.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_main.xml
@@ -6,141 +6,151 @@
     android:background="@color/background_floating_material_light"
     xmlns:ads="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:layout_marginTop="2dp"
-        android:layout_gravity="center"
-        android:background="@drawable/screen_border_layout"
-        android:orientation="vertical" >
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-        <TextView
-            android:text="@string/texto_info_aluno"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_gravity="center"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
 
-        <Button android:id="@+id/bt_add_aluno"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:drawableLeft="@drawable/ic_user_add"
-            android:background="@drawable/botao"
-            android:text="@string/novo_usuario"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickCadastro"/>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:layout_marginTop="2dp"
+                android:layout_gravity="center"
+                android:background="@drawable/screen_border_layout"
+                android:orientation="vertical" >
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:hint="Clique para selecionar o aluno" />
+                <TextView
+                    android:text="@string/texto_info_aluno"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_gravity="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
-        <Button android:id="@+id/bt_historico"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_historico"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickHistorico"/>
+                <Button android:id="@+id/bt_add_aluno"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:drawableLeft="@drawable/ic_user_add"
+                    android:background="@drawable/botao"
+                    android:text="@string/novo_usuario"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickCadastro"/>
 
-    </LinearLayout>
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:hint="Clique para selecionar o aluno" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/screen_border_layout"
-        android:orientation="vertical">
+                <Button android:id="@+id/bt_historico"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_historico"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickHistorico"/>
 
-        <TextView
-            android:text="@string/texto_assunto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_gravity="center"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="410dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/screen_border_layout"
+                android:orientation="vertical">
 
-        <Button android:id="@+id/bt_acessar_agua"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_agua"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickAgua"/>
+                <TextView
+                    android:text="@string/texto_assunto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_gravity="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
-        <Button android:id="@+id/bt_acessar_astros"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_astros"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickAstros"/>
+                <Button android:id="@+id/bt_acessar_agua"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_agua"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickAgua"/>
 
-        <Button android:id="@+id/bt_acessar_sentidos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_sentidos"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickSentidos"/>
+                <Button android:id="@+id/bt_acessar_astros"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_astros"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickAstros"/>
 
-        <Button android:id="@+id/bt_acessar_fotossintese"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_fotossintese"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickFotossintese"/>
+                <Button android:id="@+id/bt_acessar_sentidos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_sentidos"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickSentidos"/>
 
-        <Button android:id="@+id/bt_acessar_luz"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_luz"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickLuz"/>
+                <Button android:id="@+id/bt_acessar_fotossintese"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_fotossintese"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickFotossintese"/>
 
-        <Button android:id="@+id/bt_acessar_reciclagem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/botao"
-            android:text="@string/texto_botao_reciclagem"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:onClick="onClickReciclagem"/>
-    </LinearLayout>
+                <Button android:id="@+id/bt_acessar_luz"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_luz"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickLuz"/>
+
+                <Button android:id="@+id/bt_acessar_reciclagem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/botao"
+                    android:text="@string/texto_botao_reciclagem"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:onClick="onClickReciclagem"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
