--- a/CienciasDown/app/src/main/res/layout/activity_poluicao_agua.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_poluicao_agua.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/fundo"
     tools:context="br.edu.ifspsaocarlos.sdm.cienciasdown.View.PoluicaoAguaActivity">
 
     <TextView android:text="Futura tela sobre Poluição da Água" android:layout_width="wrap_content"
