--- a/CienciasDown/app/src/main/res/layout/aluno_celula.xml
+++ b/CienciasDown/app/src/main/res/layout/aluno_celula.xml
@@ -8,13 +8,15 @@
         android:id="@+id/nome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:textSize="25sp" >
     </TextView>
     <TextView
         android:id="@+id/turma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp" >
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" >
     </TextView>
 
 </LinearLayout>
