--- a/CienciasDown/app/src/main/res/values/styles.xml
+++ b/CienciasDown/app/src/main/res/values/styles.xml
@@ -6,13 +6,22 @@
         <item name="actionBarStyle">@style/MyActionBar</item>
     </style>
 
-    <style name="MyActionBar"
-        parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+    <style name="MyActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
 
-        <item name="background">@android:color/holo_green_light</item>
+        <item name="background">@color/menu</item>
+        <!--item name="background">@android:color/holo_green_light</item-->
         <item name="icon">@drawable/icone_pq</item>
         <item name="displayOptions">showTitle|showHome</item>
 
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
