--- a/CienciasDown/app/src/main/res/drawable/screen_border_layout.xml
+++ b/CienciasDown/app/src/main/res/drawable/screen_border_layout.xml
@@ -2,8 +2,7 @@
     android:padding="10dp"
     android:shape="rectangle">
 
-    <!--solid android:color="@color/abc_search_url_text_normal"  #E6E6FA/-->
-    <solid android:color="@color/box" />
+    <solid android:color="@color/abc_search_url_text_normal" />
 
     <corners
         android:bottomLeftRadius="10dp"
