--- a/CienciasDown/app/src/main/res/layout/activity_cadastro.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_cadastro.xml
@@ -3,13 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@color/fundo"
+    android:background="@color/background_floating_material_light"
     xmlns:ads="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="2dp"
         android:layout_gravity="center"
         android:background="@drawable/screen_border_layout"
         android:orientation="vertical" >
@@ -19,17 +19,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/texto_nome"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" >
+            android:text="@string/texto_nome">
         </TextView>
 
         <EditText
             android:id="@+id/edtNome"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" >
+            android:layout_height="wrap_content" >
         </EditText>
 
         <TextView
@@ -37,8 +33,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/texto_nascimento"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
             android:layout_marginTop="2dp" >
         </TextView>
 
@@ -47,9 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="date"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            android:hint="10/10/2010" >
+            android:hint="10-10-2010">
         </EditText>
 
         <TextView
@@ -57,29 +49,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/texto_turma"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
             android:layout_marginTop="2dp" >
         </TextView>
 
         <EditText
             android:id="@+id/edtTurma"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" >
+            android:layout_height="wrap_content" >
         </EditText>
 
-        <TextView
-            android:text="@string/texto_assunto"
-            android:layout_width="wrap_content"
+        <Button android:id="@+id/bt_enviar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/botao"
             android:visibility="invisible"
+            android:text="@string/texto_botao_enviar"
             android:textColor="#FFFFFF"
-            android:textSize="5sp"
-            android:textStyle="bold" />
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:onClick="onClickEnviar"/>
+
+        <Button android:id="@+id/bt_ver_alunos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/botao"
+            android:visibility="invisible"
+            android:text="@string/texto_botao_ver_alunos"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:onClick="onClickVerAlunos"/>
 
     </LinearLayout>
 </LinearLayout>
