--- a/CienciasDown/app/src/main/res/layout/activity_evaporacao.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_evaporacao.xml
@@ -1,100 +1,124 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/fundo"
-    xmlns:ads="http://schemas.android.com/apk/res-auto">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="br.edu.ifspsaocarlos.sdm.cienciasdown.View.EvaporacaoActivity"
+    android:background="@drawable/screen_border_layout">
 
-    <ScrollView
+    <!--VideoView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
+        android:id="@+id/videoViewEvaporacao"
+        android:layout_marginRight="335dp"
+        android:layout_marginEnd="335dp"
+        android:layout_marginBottom="166dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" /-->
 
-        <LinearLayout
-            android:layout_width="fill_parent"
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/youtubeEvaporacao"
+        android:layout_marginRight="315dp"
+        android:layout_marginEnd="315dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="123dp" />
+
+    <TextView
+        android:id="@+id/txtEvapParabens"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/texto_parabens"
+        android:layout_alignParentTop="true"
+        android:visibility="invisible"
+        android:layout_alignRight="@+id/rdgEvaporacao"
+        android:layout_alignEnd="@+id/rdgEvaporacao"
+        android:layout_marginTop="31dp">
+    </TextView>
+
+    <Button android:id="@+id/bt_evap_continuar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/botao"
+        android:visibility="invisible"
+        android:text="@string/texto_botao_continuar"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_alignTop="@+id/bt_evap_repetir"
+        android:layout_alignLeft="@+id/bt_evap_repetir"
+        android:layout_alignStart="@+id/bt_evap_repetir"
+        android:layout_alignRight="@+id/bt_evap_repetir"
+        android:layout_alignEnd="@+id/bt_evap_repetir"
+        android:onClick="onClickContinuar"/>
+
+    <TextView
+        android:id="@+id/txtEvapRepetir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="@string/texto_tente_novamente"
+        android:layout_alignTop="@+id/txtEvapParabens"
+        android:layout_toRightOf="@+id/txtQuestãoEvaporacao"
+        android:layout_toEndOf="@+id/txtQuestãoEvaporacao">
+    </TextView>
+
+    <Button android:id="@+id/bt_evap_repetir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/botao"
+        android:visibility="invisible"
+        android:text="@string/texto_botao_repetir"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/txtEvapRepetir"
+        android:layout_alignEnd="@+id/txtEvapRepetir"
+        android:onClick="onClickRepetir" />
+
+    <TextView
+        android:id="@+id/txtQuestãoEvaporacao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/questao_evaporacao"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="87dp">
+    </TextView>
+
+    <RadioGroup
+        android:id="@+id/rdgEvaporacao"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:layout_alignTop="@+id/txtQuestãoEvaporacao"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="44dp">
+
+        <RadioButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:background="@drawable/screen_border_layout"
-            android:orientation="vertical">
+            android:id="@+id/opEvapSol"
+            android:drawableRight="@drawable/sol" />
 
-            <com.google.android.youtube.player.YouTubePlayerView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/youtubeEvaporacao"
-                android:layout_marginTop="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/opEvapCasa"
+            android:drawableRight="@drawable/casa" />
 
-            <TextView
-                android:id="@+id/txtQuestãoEvaporacao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/questao_evaporacao"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp"
-                android:layout_gravity="center"
-                android:layout_marginTop="7dp" >
-            </TextView>
-
-            <RadioGroup
-                android:id="@+id/rdgEvaporacao"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:layout_marginTop="7dp" >
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/opEvapSol"
-                    android:drawableRight="@drawable/sol" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/opEvapCasa"
-                    android:drawableRight="@drawable/casa" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/opEvapPeixe"
-                    android:drawableRight="@drawable/peixe" />
-            </RadioGroup>
-            <TextView
-                android:id="@+id/txtEvap"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp"
-                android:layout_gravity="center"
-                android:layout_marginTop="31dp" >
-            </TextView>
-
-            <Button android:id="@+id/btnEvap"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                android:background="@drawable/botao"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:layout_marginTop="7dp"
-                android:onClick="onClickEvap" />
-
-            <TextView
-                android:text="@string/texto_assunto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_gravity="center"
-                android:visibility="invisible"
-                android:textColor="#FFFFFF"
-                android:textSize="5sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/opEvapPeixe"
+            android:drawableRight="@drawable/peixe" />
+    </RadioGroup>
+</RelativeLayout>
