--- a/CienciasDown/app/src/main/res/layout/activity_main.xml
+++ b/CienciasDown/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@color/fundo"
+    android:background="@color/background_floating_material_light"
     xmlns:ads="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
@@ -18,7 +18,7 @@
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="230dp"
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="2dp"
                 android:layout_gravity="center"
                 android:background="@drawable/screen_border_layout"
                 android:orientation="vertical" >
@@ -70,7 +70,7 @@
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="410dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/screen_border_layout"
                 android:orientation="vertical">
@@ -150,17 +150,6 @@
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:onClick="onClickReciclagem"/>
-
-                <TextView
-                    android:text="@string/texto_assunto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_gravity="center"
-                    android:visibility="invisible"
-                    android:textColor="#FFFFFF"
-                    android:textSize="5sp"
-                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
